content.css
.highlighter-active ::selection {
  background-color: transparent;
}

.highlighter-active * {
  cursor: none !important;
}

.highlighter-active a,
.highlighter-active button,
.highlighter-active input,
.highlighter-active textarea,
.highlighter-active select,
.highlighter-active [role="button"] {
    pointer-events: none !important;
}

.highlight {
  position: absolute;
  /* background: rgba(255, 255, 0, 0.5); */
  color: black;
  border-radius: 10px;
  /* padding: 0 2px; */
  pointer-events: var(--highlights-selectable, none);
  z-index: 0;
  /* mix-blend-mode: multiply; */
  opacity: 0.75;
  user-select: none;
}

.cursor {
  display: none;
  pointer-events: none; /* Needed to prevent our cursor from becoming the unintended target of our mouse events */
  position: fixed; /* Required for setting inset values */
  height: 32px;
  width: 32px;
  border-radius: 32px;
  background-color: #ffff0050;
  transform: translate(-50%, -50%); /* Centers circle to cursor location */
  transform-origin: top left;
  /* overflow: visible; */
}

.cursor.action-icons::before {
  content: "";
  position: absolute;
  top: -8px;
  left: -8px;
  width: 8px;
  height: 8px;
  background-image: url("images/delete.png");
  z-index: 0;
}
.cursor.action-icons::after {
  content: "";
  position: absolute;
  top: -8px;
  right: -8px;
  width: 8px;
  height: 8px;
  background-image: url("images/copy.png");
  z-index: 0;
}

